2014-02-17  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.3.90 release.

        * Source/autotools/Versions.m4: Bump version numbers.

2014-02-12  Ryan Lortie  <desrt@desrt.ca>

        'ar T' is not portable and breaks the build on FreeBSD
        https://bugs.webkit.org/show_bug.cgi?id=128596

        Reviewed by Gustavo Noronha Silva.

        Create thin archives only if we are using GNU ar.

        * Source/autotools/SetupLibtool.m4:

2014-02-09  Carlos Garnacho  <carlosg@gnome.org>

        [GTK] Enable touch features
        https://bugs.webkit.org/show_bug.cgi?id=98931

        Reviewed by Carlos Garcia Campos.

        * Source/autotools/SetupWebKitFeatures.m4:
        * Source/cmake/OptionsGTK.cmake: set ENABLE_TOUCH_EVENTS to 1 if building with GTK+.

2014-02-05  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.3.5 release.

        * Source/autotools/Versions.m4: Bump version numbers.

2014-01-29  Csaba Osztrogonác  <ossy@webkit.org>

        Remove ENABLE(JAVASCRIPT_DEBUGGER) leftovers
        https://bugs.webkit.org/show_bug.cgi?id=127845

        Reviewed by Joseph Pecoraro.

        * Source/autotools/SetupWebKitFeatures.m4:

2014-01-29  Csaba Osztrogonác  <ossy@webkit.org>

        Remove ENABLE(JAVASCRIPT_DEBUGGER) guards
        https://bugs.webkit.org/show_bug.cgi?id=127840

        Reviewed by Mark Lam.

        * Source/cmake/WebKitFeatures.cmake:
        * Source/cmakeconfig.h.cmake:

2014-01-25  Darin Adler  <darin@apple.com>

        Get rid of ICU_UNICODE and WCHAR_UNICODE remnants
        https://bugs.webkit.org/show_bug.cgi?id=127623

        Reviewed by Anders Carlsson.

        * Source/cmake/OptionsEfl.cmake: Removed ICU_UNICODE and WCHAR_UNICODE flags.
        * Source/cmake/OptionsGTK.cmake: Ditto.
        * Source/cmake/OptionsWinCE.cmake: Ditto.

2014-01-23  Max Vujovic  <mvujovic@adobe.com>
