@@ -1,3 +1,12 @@
+2014-02-27  Koop Mast  <kwm@FreeBSD.org>
+
+        Fallback on checking for libz manualy if zlib.pc isn't available.
+        https://bugs.webkit.org/show_bug.cgi?id=127061
+
+        Reviewed by Gustavo Noronha Silva.
+
+        * Source/autotools/FindDependencies.m4:
+
 2014-02-17  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Update NEWS and Versions.m4 for 2.3.90 release.
